# gp-file-hide

./: README.md  hello_world.test  hide_as_bmp.py  hide_as_media.py  pyproject.toml  undo.py
gp_disguise/: __init__.py  cli.py  config.py  extract.py  hide.py
tests/: test_media_disguise.py
